--- a/.editorconfig
+++ b/.editorconfig
@@ -3,12 +3,15 @@ root = true
 
 # Unix-style newlines with a newline ending every file, utf-8 charset
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = false
-charset = utf-8
 
 # Match nix files, set indent to spaces with width of two
 [*.nix]
-indent_style = space
 indent_size = 2
+indent_style = space
+trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
